@@ -1,3 +1,7 @@
+[B]Version 0.0.3 - 2014-04-24[/B]
+
+- Use common cache API.
+
 [B]Version 0.0.2 - 2013-07-21[/B]
 
 - Use SomaFM XML API.
